--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,15 @@
         <jaxb.version>2.1.17</jaxb.version>
         <additionalparam>-Xdoclint:none</additionalparam>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
     <build>
         <plugins>
             <plugin>
